--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Welcome to Pro-Green Shapers, where dedication to environmental causes fuels our journey. Discover the story behind our mission
+          and the passionate team driving our initiatives.</p>
         </div>
 
         <div class="row">
@@ -299,8 +300,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Our Projects</h2>
+          <p>Explore our impactful projects addressing environmental issues. From tree planting to waste reduction, learn how we make
+          a difference.</p>
         </div>
 
         <div class="row">
