--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <i class="bi bi-phone-fill phone-icon"></i> +254 701 191110
       </div>
       <div class="social-links d-none d-md-block">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://twitter.com/ProGreenShapers" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/Greenafricapro/" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
