--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Join the Green Movement</h2>
-              <p class="animate__animated animate__fadeInUp">The call to action is clear: join the green movement. Be a part of our mission to create a greener, healthier planet
+              <p class="animate__animated animate__fadeInUp">Be a part of our mission to create a greener, healthier planet
               through collective action and environmental stewardship.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
