--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <!-- <h1 class="logo me-auto"><a href="index.html">Pro-Green Shapers</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="assets/img/logo.jpg" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="assets/img/pro-green.jpg" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
