--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">ferouzewere@gmail.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +254 701 191110
+        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@progreenshapers.org</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +254 701 111110
       </div>
       <div class="social-links d-none d-md-block">
         <a href="https://twitter.com/ProGreenShapers" class="twitter"><i class="bi bi-twitter"></i></a>
