--- a/index.html
+++ b/index.html
@@ -97,16 +97,13 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
-
+  
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-
+  
       <div class="carousel-inner" role="listbox">
-
+  
         <!-- Slide 1 -->
-
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide1.jpg)">
-=======
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide2-min.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Pro-Green Shapers</span></h2>
@@ -117,12 +114,9 @@
             </div>
           </div>
         </div>
-
+  
         <!-- Slide 2 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide2.jpg)">
-=======
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide3-min.jpg)">
-
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Preserving Nature, Preserving Lives</h2>
@@ -132,11 +126,9 @@
             </div>
           </div>
         </div>
-
+  
         <!-- Slide 3 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide3.jpg)">
-=======
-        <div class="carousel-item" style="background-image: url(assets/img/slide/kazuend-19SC2oaVZW0-unsplash-min.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Join the Green Movement</h2>
@@ -146,19 +138,20 @@
             </div>
           </div>
         </div>
-
+  
       </div>
-
+  
       <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
       </a>
-
+  
       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
       </a>
-
+  
     </div>
-  </section><!-- End Hero -->
+  </section>
+  <!-- End Hero -->
 
   <main id="main">
 
