--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="carousel-inner" role="listbox">
   
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide1.jpg)">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/kazuend-19SC2oaVZW0-unsplash-min.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Pro-Green Shapers</span></h2>
@@ -116,7 +116,7 @@
         </div>
   
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide2.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide2-min.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Preserving Nature, Preserving Lives</h2>
@@ -128,7 +128,7 @@
         </div>
   
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide3.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide3-min.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Join the Green Movement</h2>
