--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="">
-              <h4>Walter White</h4>
+              <img src="assets/img/team/mitch.jpg" alt="">
+              <h4>Michelle Uvya</h4>
               <span>Chief Executive Officer</span>
               <p>
                 Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
