--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/mitch.jpg" alt="">
+              <img src="assets/img/team/mitch-min.jpg" alt="">
               <h4>Michelle Uvya</h4>
               <span>Chief Executive Officer</span>
               <p>
