--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
               <img src="assets/img/team/mitch-min.jpg" alt="">
               <h4>Michelle Uvya</h4>
