line 177 align center

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <p class="description">Be dynamic, inclusive and educative to meet the 10% gazetted Kenyan forests Cover.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 align-items-center">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
               <h4 class="title"><a href="">Objective</a></h4>
