--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
       <div class="container">
 
         <div class="row no-gutters">
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6" id="feat">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-laptop"></i></div>
               <h4 class="title"><a href="">Mission</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6" id="feat">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Vision</a></h4>
               <p class="description">Be dynamic, inclusive and educative to meet the 10% gazetted Kenyan forests Cover.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 align-items-center">
+          <div class="col-lg-4 col-md-6" id="feat">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
               <h4 class="title"><a href="">Objective</a></h4>
