--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6" id="feat" style="margin: auto;">
+          <div class="col-lg-4 col-md-6" style="align-items: center;">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">Vision</a></h4>
