--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="row no-gutters justify-content-center align-items-center">
           <div class="col-lg-4 col-md-6" id="feat">
             <div class="icon-box text-center">
-              <div class="icon"><i class="bi bi-laptop"></i></div>
+              <div class="icon"><i class="bi bi-rocket"></i></div>
               <h4 class="title"><a href="">Mission</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                 occaecati cupiditate non provident</p>
