--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
           </div>
           <div class="col-lg-4 col-md-6" style="align-items: center;">
             <div class="icon-box text-center">
-              <div class="icon"><i class="bi bi-briefcase"></i></div>
+              <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Vision</a></h4>
               <p class="description">Be dynamic, inclusive and educative to meet the 10% gazetted Kenyan forests Cover.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" id="feat">
             <div class="icon-box text-center">
-              <div class="icon"><i class="bi bi-calendar4-week"></i></div>
+              <div class="icon"><i class="bi bi-bullseye"></i></div>
               <h4 class="title"><a href="">Objective</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur trade stravi</p>
