--- a/index.html
+++ b/index.html
@@ -397,8 +397,10 @@
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>Join Us in Our Mission</h3>
+            <p>We believe that everyone has a role to play in building a sustainable future. Whether you're a passionate volunteer, a
+            dedicated supporter, or a potential partner, there's a place for you at Pro-Green Shapers. Join us as we continue to [briefly
+            highlight future goals or projects] and shape a world where environmental harmony thrives.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
