--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             highlight future goals or projects] and shape a world where environmental harmony thrives.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="#">Join us Today</a>
           </div>
         </div>
 
