--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pro-Green - Home</title>
+  <title>Pro-Green Shapers</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -107,7 +107,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Pro-Green Shapers</span></h2>
-              <p class="animate__animated animate__fadeInUp">Empowering Communities for Sustainable Futures"
+              <p class="animate__animated animate__fadeInUp">Empowering Communities for Sustainable Futures
               Where our passion for the environment meets a purpose: empowering communities through
               sustainable initiatives, fostering a brighter future for all</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
