--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="carousel-item active" style="background-image: url(assets/img/slide/kazuend-19SC2oaVZW0-unsplash-min.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Pro-Green Shapers</span></h2>
+              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>PRO-GREEN SHAPERS</span></h2>
               <p class="animate__animated animate__fadeInUp">Empowering Communities for Sustainable Futures
               Where our passion for the environment meets a purpose: empowering communities through
               sustainable initiatives, fostering a brighter future for all</p>
