--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="#join">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -403,7 +403,7 @@
             highlight future goals or projects] and shape a world where environmental harmony thrives.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="https://forms.gle/zFHuUJYdkTC6M4FR8">Join us Today</a>
+            <a class="cta-btn align-middle" href="https://forms.gle/zFHuUJYdkTC6M4FR8" id="join">Join us Today</a>
           </div>
         </div>
 
