--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Meet the Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Meet Our Amazing Team</h2>
+          <p>Meet the dedicated individuals who drive our mission towards a sustainable future.</p>
         </div>
 
         <div class="row">
@@ -492,13 +492,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>A108 Adam Street, Nairobi, Kenya</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>info@progreenshapers.com</p>
               </div>
 
               <div class="phone">
