--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 <p>+1 5589 55488 55s</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/place/Jeevanjee+Gardens/@-1.2812394,36.8167838,17z/data=!4m14!1m7!3m6!1s0x182f11c0dd75443b:0x9d87b1d0945637ad!2sJeevanjee+Gardens!8m2!3d-1.2812394!4d36.8193587!16s%2Fg%2F11hd_d27dn!3m5!1s0x182f11c0dd75443b:0x9d87b1d0945637ad!8m2!3d-1.2812394!4d36.8193587!16s%2Fg%2F11hd_d27dn?authuser=0&entry=ttu" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
