--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
-              <img src="assets/img/team/mitch-min.jpg" alt="">
+              <img src="assets/img/team/team-1.jpg" alt="">
               <h4>Michelle Uvya</h4>
               <span>Chief Executive Officer</span>
               <p>
