--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="">
+              <img src="assets/img/team/team-1.jpg" alt="team-1">
               <h4>Michelle Uvya</h4>
               <span>Chief Executive Officer</span>
               <p>
@@ -439,7 +439,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-2.jpg" alt="">
+              <img src="assets/img/team/team-2.jpg" alt="team-2">
               <h4>Sarah Jhinson</h4>
               <span>Product Manager</span>
               <p>
@@ -456,7 +456,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-3.jpg" alt="">
+              <img src="assets/img/team/team-3.jpg" alt="team-3">
               <h4>William Anderson</h4>
               <span>CTO</span>
               <p>
