--- a/index.html
+++ b/index.html
@@ -507,7 +507,9 @@
                 <p>+1 5589 55488 55s</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/place/Jeevanjee+Gardens/@-1.2812394,36.8167838,17z/data=!4m14!1m7!3m6!1s0x182f11c0dd75443b:0x9d87b1d0945637ad!2sJeevanjee+Gardens!8m2!3d-1.2812394!4d36.8193587!16s%2Fg%2F11hd_d27dn!3m5!1s0x182f11c0dd75443b:0x9d87b1d0945637ad!8m2!3d-1.2812394!4d36.8193587!16s%2Fg%2F11hd_d27dn?authuser=0&entry=ttu" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.820803282882!2d36.81678377472447!3d-1.281239398706572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11c0dd75443b%3A0x9d87b1d0945637ad!2sJeevanjee%20Gardens!5e0!3m2!1sen!2ske!4v1703525591909!5m2!1sen!2ske"
+                allowfullscreen="" loading="lazy" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
@@ -568,7 +570,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/green-free-one-page-bootstrap-template/ -->
-        Designed by <a href="https://ferouzewere.github.io/">Ferouze Were</a>
+        Designed by <a href="https://ferouzewere.github.io/">Design Hub</a>
       </div>
     </div>
   </footer><!-- End Footer -->
