--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, Nairobi, Kenya</p>
+                <p>Moktar Dadah Street, Nairobi, Kenya</p>
               </div>
 
               <div class="email">
@@ -504,7 +504,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+254 701 111110</p>
               </div>
 
               <iframe
