--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/green-free-one-page-bootstrap-template/ -->
-        Designed by <a href="https://ferouzewere.github.io/">Design Hub</a>
+        Designed by <a href="https://ferouzewere.github.io/">Code.Inc</a>
       </div>
     </div>
   </footer><!-- End Footer -->
