--- a/index.html
+++ b/index.html
@@ -163,15 +163,20 @@
             <div class="icon-box text-center">
               <div class="icon"><i class="bi bi-rocket"></i></div>
               <h4 class="title"><a href="">Mission</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-                occaecati cupiditate non provident</p>
+              <p class="description">
+                To empower the communities across the Western Region of Kenya through youth-led initiatives that promote environmental
+                sustainability, foster climate resilience, and create a harmonious coexistence between people and nature.
+              </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" style="align-items: center;">
             <div class="icon-box text-center">
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Vision</a></h4>
-              <p class="description">Be dynamic, inclusive and educative to meet the 10% gazetted Kenyan forests Cover.</p>
+              <p class="description">
+                A thriving and resilient Western Region where every individual, especially the youth, actively participates in and
+                benefits from sustainable practices, ensuring a green and healthy environment for current and future generations.
+              </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" id="feat">
