--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Vision</a></h4>
               <p class="description">
-                A thriving and resilient Western Region where every individual, especially the youth, actively participates in and
-                benefits from sustainable practices, ensuring a green and healthy environment for current and future generations.
+                At Pro Green Shapers, we envision a future where communities not only coexist with nature but actively thrive in harmony
+                with it. Our vision extends beyond local borders, aiming to inspire and drive environmental action on a global scale. We
+                believe that by harnessing the passion and energy of the youth, we can catalyze a movement that transforms our
+                relationship with the environment for the better.
               </p>
             </div>
           </div>
@@ -207,10 +209,14 @@
             <img src="assets/img/team-01.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>A Brief About Us</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Founded by a group of dedicated young individuals in 2018, Pro Green Shapers envisions a community that thrives in
+              harmony with nature. We believe in the power of youth-led initiatives to bring about positive change, and our
+              organization serves as a catalyst for environmental action across the globe. or In 2018, a passionate and
+              forward-thinking group of young individuals came together to establish Pro Green Shapers. United by a shared commitment
+              to environmental sustainability and a profound belief in the transformative power of youth-led initiatives, the
+              organization was born out of a collective vision to create positive change in communities worldwide.
             </p>
             <ul>
               <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
