--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class="icon"><i class="bi bi-rocket"></i></div>
               <h4 class="title"><a href="">Mission</a></h4>
               <p class="description">
-                To empower the communities across the Western Region of Kenya through youth-led initiatives that promote environmental
+                To empower the communities across Africa through youth-led initiatives that promote environmental
                 sustainability, foster climate resilience, and create a harmonious coexistence between people and nature.
               </p>
             </div>
@@ -212,7 +212,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>A Brief About Us</h3>
             <p>
-              Established in 2018 by a group of passionate young individuals, Pro Green Shapers is driven by a vision of communities
+              Established by a group of passionate young individuals, Pro Green Shapers is driven by a vision of communities
               thriving in harmony with nature. Our belief in the power of youth-led initiatives guides our mission to catalyze
               environmental action globally. We engage in education, training, and advocacy to promote sustainable living practices
               and raise awareness about environmental issues. By fostering partnerships with various stakeholders and implementing
