--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
               <div class="icon"><i class="bi bi-rocket"></i></div>
               <h4 class="title"><a href="">Mission</a></h4>
               <p class="description">
-                To empower the communities across Africa through youth-led initiatives that promote environmental
-                sustainability, foster climate resilience, and create a harmonious coexistence between people and nature.
+                To empower the communities across Africa through youth-led initiatives that promote environmental sustainability, foster
+                climate resilience, and create a harmonious coexistence between people and nature.
               </p>
             </div>
           </div>
