--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Meet Our Amazing Team</h2>
+          <h2>Our Amazing Team</h2>
           <p>Meet the dedicated individuals who drive our mission towards a sustainable future.</p>
         </div>
 
