--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
               <img src="assets/img/team/team-1.jpg" alt="team-1">
-              <h4>Michelle Uvya</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Dianey Mugalizi</h4>
+              <span>Programs Director</span>
               <p>
                 Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
               </p>
@@ -405,8 +405,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-2.jpg" alt="team-2">
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
+              <h4>Michelle Uvya</h4>
+              <span>Communications Manager</span>
               <p>
                 Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
               </p>
@@ -423,7 +423,7 @@
             <div class="member">
               <img src="assets/img/team/team-3.jpg" alt="team-3">
               <h4>William Anderson</h4>
-              <span>CTO</span>
+              <span>Finance Manager</span>
               <p>
                 Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
               </p>
@@ -442,8 +442,8 @@
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
               <img src="assets/img/team/team-1.jpg" alt="team-1">
-              <h4>Michelle Uvya</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Ferouze Were</h4>
+              <span>ICT</span>
               <p>
                 Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
               </p>
@@ -459,8 +459,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-2.jpg" alt="team-2">
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
+              <h4>Daisy Muthoni</h4>
+              <span>Green Ambassador - Kenya</span>
               <p>
                 Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
               </p>
