--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-3.jpg" alt="team-3">
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <h4>Masereka Eric Sikahwa</h4>
+              <span>Green Ambassador - Uganda</span>
               <p>
                 Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
               </p>
