--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-3.jpg" alt="team-3">
-              <h4>William Anderson</h4>
+              <h4>Charity Gloriah</h4>
               <span>Finance Manager</span>
               <p>
                 Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
