--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="team-1">
+              <img src="assets/img/team/Dianey.jpg" alt="Programs-Director">
               <h4>Dianey Mugalizi</h4>
               <span>Programs Director</span>
               <p>
@@ -404,7 +404,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-2.jpg" alt="team-2">
+              <img src="assets/img/team/Uvya.jpg" alt="Communications-Manager">
               <h4>Michelle Uvya</h4>
               <span>Communications Manager</span>
               <p>
@@ -458,7 +458,7 @@
         
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-2.jpg" alt="team-2">
+              <img src="assets/img/team/Daisy.jpg" alt="team-2">
               <h4>Daisy Muthoni</h4>
               <span>Green Ambassador - Kenya</span>
               <p>
@@ -475,7 +475,7 @@
         
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-3.jpg" alt="team-3">
+              <img src="assets/img/team/Masereka.jpg" alt="team-3">
               <h4>Masereka Eric Sikahwa</h4>
               <span>Green Ambassador - Uganda</span>
               <p>
