--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/team-01.jpg" class="img-fluid" alt="">
+            <img src="assets/img/new-team.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>A Brief About Us</h3>
