--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="team-1">
+              <img src="assets/img/team/Ferouze.jpg" alt="team-1">
               <h4>Ferouze Were</h4>
               <span>ICT</span>
               <p>
