--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Activities</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Donate to Us</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+          <li class="dropdown">
+            <a href="#">
+              <span>Donate to Us</span>
+              <!-- <i class="bi bi-chevron-down"></i> -->
+            </a>
+            <!-- <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -82,7 +86,7 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
+            </ul> -->
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
           <li><a class="getstarted scrollto" href="#join">Get Started</a></li>
