--- a/index.html
+++ b/index.html
@@ -301,8 +301,10 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Green Futures Education Program</a></h4>
+              <p>A community-focused initiative to provide environmental education to schools, encouraging sustainable practices among
+                students.
+              </p>
             </div>
           </div>
 
@@ -314,8 +316,10 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Global Reforestation Campaign</a></h4>
+              <p>A youth-led effort to plant trees and combat deforestation on a global scale, contributing to carbon sequestration and
+                biodiversity conservation.
+              </p>
             </div>
           </div>
 
@@ -327,8 +331,10 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Sustainable Communities Project:</a></h4>
+              <p>Working with local communities to implement eco-friendly practices, such as waste management and renewable
+                energy adoption.
+              </p>
             </div>
           </div>
 
