--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               </p>
             </div>
           </div>
-
+<!-- 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-yellow">
               <div class="icon">
@@ -380,7 +380,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>End Services Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
