--- a/index.html
+++ b/index.html
@@ -375,12 +375,13 @@
               <h4><a href="">Divera Don</a></h4>
               <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
       </div>
-    </section>End Services Section -->
+    </section> 
+    <!-- End Services Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
