--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
             </ul> -->
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
-          <!-- <li><a class="getstarted" href="#join">Call Us Now!</a></li> -->
-          <li>
-            <a href=“tel:+2547051638986” class="getsarted">Let's Talk!</a>
-          </li>
+          <li><a class="getstarted" href="#contact">Let's Talk!!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
