--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul> -->
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
-          <li><a class="getstarted" href="#contact">Let's Talk!!</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li> -->
+          <li><a class="getstarted scrollto" href="#contact">Let's Talk!!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
