--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <li><a class="nav-link scrollto" href="#services">Activities</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown">
-            <a href="#">
-              <span>Donate to Us</span>
+            <a href="#contact">
+              <span>Let's Talk!</span>
               <!-- <i class="bi bi-chevron-down"></i> -->
             </a>
             <!-- <ul>
@@ -89,7 +89,7 @@
             </ul> -->
           </li>
           <!-- <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li> -->
-          <li><a class="getstarted scrollto" href="#contact">Let's Talk!</a></li>
+          <li><a class="getstarted scrollto" href="">Donate to Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
