--- a/index.html
+++ b/index.html
@@ -525,7 +525,10 @@
 
         <div class="section-title">
           <h2>Contact Us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>At Pro-Green Shapers, we're deeply committed to our planet and its well-being. Your voice matters in our mission to
+          protect and preserve the environment. Whether you have ideas, inquiries, or simply want to connect, we're all ears! Use
+          the form below to reach out to us, and together, let's make a difference for a greener, healthier world. Thank you for
+          joining us on this journey towards sustainability!</p>
         </div>
 
         <div class="row">
