New slide images

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="carousel-inner" role="listbox">
   
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/kazuend-19SC2oaVZW0-unsplash-min.jpg)">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/SlideArtboard\ 1-100.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>PRO-GREEN SHAPERS</span></h2>
@@ -119,7 +119,7 @@
         </div>
   
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide2-min.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/SlideArtboard\ 2-100.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Preserving Nature, Preserving Lives</h2>
@@ -131,7 +131,7 @@
         </div>
   
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide3-min.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/SlideArtboard\ 4-100.jpg)">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Join the Green Movement</h2>
