--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@progreenshapers.org</a>
-        <i class="bi bi-phone-fill phone-icon"><a href="tel:0705163986">+254-705-163986</a></i>
+        <!-- <i class="bi bi-phone-fill phone-icon"><a href="tel:0705163986">+254-705-163986</a></i> -->
       </div>
       <div class="social-links d-none d-md-block">
         <a href="https://twitter.com/ProGreenShapers" class="twitter"><i class="bi bi-twitter"></i></a>
