--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="social-links d-none d-md-block">
         <a href="https://twitter.com/ProGreenShapers" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.facebook.com/Greenafricapro/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/Greenafricapro/" target="_blank" rel="noopener noreferrer" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
@@ -616,7 +616,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/green-free-one-page-bootstrap-template/ -->
-        Designed by <a href="https://ferouzewere.github.io/">Code.Inc</a>
+        Designed by <a href="https://ferouzewere.github.io/" target="_blank" rel="noopener noreferrer">Code.Inc</a>
       </div>
     </div>
   </footer><!-- End Footer -->
