--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@progreenshapers.com</p>
+                <p>info@progreenshapers.org</p>
               </div>
 
               <div class="phone">
