--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul> -->
           </li>
-          <!-- <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li> -->
+          <li><a class="nav-link scrollto" href="#cta">Volunteer</a></li>
           <li><a class="getstarted scrollto" href="">Donate to Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
