--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- <i class="bi bi-phone-fill phone-icon"><a href="tel:0705163986">+254-705-163986</a></i> -->
       </div>
       <div class="social-links d-none d-md-block">
-        <a href="https://twitter.com/ProGreenShapers" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://twitter.com/ProGreenShapers" target="_blank" rel="noopener noreferrer" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/Greenafricapro/" target="_blank" rel="noopener noreferrer" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
